push for home fix swiper with overflow

--- a/src/components/BurgerMenu/BurgerMenu.scss
+++ b/src/components/BurgerMenu/BurgerMenu.scss
@@ -1,10 +1,10 @@
 .burger-menu {
   transition: 0.25s;
-  left: -100%;
+  right: -100%;
   bottom: 0;
   height: calc(100vh - 100px);
   width: 100vw;
-  position: absolute;
+  position: fixed;
   flex-direction: column;
   z-index: 1;
   margin-left: 44px;
@@ -15,12 +15,14 @@
 
   &--active {
     opacity: 1;
-    left: 0;
+    bottom: 0;
+    right: 0;
   }
 
   &__link {
     height: 44px;
     font-size: 40px;
+    margin-left: 40px;
     width: max-content;
 
     &:first-child {
