--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -5,6 +5,7 @@
   padding: 26px 0;
   z-index: 10;
   background: rgba(0, 0, 0);
+  position: fixed;
 
   &__wrapper {
     width: 100%;
