--- a/src/components/SwiperHaz/Swiper.scss
+++ b/src/components/SwiperHaz/Swiper.scss
@@ -1,20 +1,22 @@
 .swiper-haz {
+  position: relative;
 
+  &__compose {
+    width: 100%;
+    height: 100%;
+    position: relative;
+  }
+  
   &__wrapper {
     height: 100%;
     max-height: 700px;
     overflow: hidden;
     position: sticky;
-    top: 100px;
-  }
-
-  &__compose {
-    width: 100%;
-    position: relative;
-  }
-
-  .swiper-wrapper {
     top: 0;
+  }
+
+  .phantom {
+    position: relative;
   }
 
   .swiper-slide-active {
@@ -24,8 +26,9 @@
       }
     }
   }
-  
+
   &__title {
     margin-bottom: 96px;
   }
 }
+
