--- a/src/main.scss
+++ b/src/main.scss
@@ -20,17 +20,16 @@ footer, header, hgroup, menu, nav, section {
 }
 
 html {
-  width: 100%;
-  height: 100%;
-  overflow: hidden;
   background: var(--black);
+  overflow: hidden scroll;
 }
 
 body {
   width: 100%;
   height: 100%;
-  overflow: hidden scroll;
+  overflow: hidden;
   @include font(14px, 100%, 300);
+  position: relative;
 
   &::-webkit-scrollbar {
     position: relative;
